refactor(controller, utils): Buyer 객체 생성 기능 리팩토링