@@ -3,7 +3,6 @@ package utils;
 import camp.nextstep.edu.missionutils.Randoms;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import validator.InputValidator;
 
 public class Utils {
@@ -11,11 +10,11 @@ public class Utils {
         InputValidator.validateWinningNumbersIsNumeric(input);
         return Arrays.stream(input)
                      .map(Integer::parseInt)
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
     public static String[] splitInputByComma(String input) {
-        return input.split("＼＼s*,＼＼s*");
+        return input.split("\\s*,\\s*");
     }
 
     public static List<Integer> generateRandomUniqueNumbers(
